# PTMC

./: .gitignore  .pullapprove.yml  .travis.yml  LICENSE.VELOX  README.VELOX  README.md
llvm-2.8-R3/: .gitignore
llvm-2.8-R3/lib/ExecutionEngine/JIT/: Intercept.cpp
llvm-gcc-R3/gcc/: Makefile.in  builtin-types.def  builtins.def  c-common.c  c-common.h  c-parser.c  c-tree.h  c-typeck.c  common.opt  except.c  except.h  gimple-low.c  gimplify.c  gtm-builtins.def  llvm-backend.cpp  llvm-convert.cpp  llvm-internal.h  llvm.h  omp-low.c  output.h  passes.c  reg-notes.def  toplev.h  trans-mem.c  tree-cfg.c  tree-eh.c  tree-flow-inline.h  tree-flow.h  tree-gimple.c  tree-inline.c  tree-pass.h  tree-pretty-print.c  tree.c  tree.def  tree.h  treestruct.def  varasm.c
llvm-gcc-R3/gcc/cp/: cp-gimplify.c  cp-tree.h  cxx-pretty-print.c  lex.c  parser.c  semantics.c
tanger_R3/: .gitignore  AUTHORS.txt  Changelog  Makefile  Makefile.common  Makefile.common.in  README.txt  config.status  configure
tanger_R3/Debug/lib/: .dir  libtanger-stm.bc  stmsupport.bc
tanger_R3/autoconf/: configure.ac
tanger_R3/docs/: FAQ.txt  issues.tex  stack-rollback.tex  usermanual.tex
tanger_R3/include/: tanger-stm-internal-gibraltar.h  tanger-stm-internal.h  tanger-stm-stats.h  tanger-stm-std-math.h  tanger-stm-std-stdarg.h  tanger-stm-std-string.h  tanger-stm.h
tanger_R3/include/tanger/: config.h  config.h.in
tanger_R3/lib/: Makefile
tanger_R3/lib/stmdummy/: Makefile  dummystm-ls.c  dummystm.c  dummystm.h
tanger_R3/lib/stmdummy/Debug/: .dir  dummystm-ls.bc  dummystm-ls.bc.d  dummystm-ls.d  dummystm-ls.ll  dummystm.bc  dummystm.bc.d  dummystm.d  dummystm.ll
tanger_R3/lib/stmsupport/: Makefile  indirectcalls.c  std-string.c
tanger_R3/lib/stmsupport/Debug/: .dir  indirectcalls.bc  indirectcalls.bc.d  indirectcalls.ll  std-string.bc  std-string.bc.d  std-string.ll
tanger_R3/lib/tanger/: Makefile  buildinfo.inc  funcinfo.h  gibraltar.h  interface.cpp  interface.h  support.cpp  support.h  tanger.cpp  tanger.h  transformations.cpp  transformations.h
tanger_R3/lib/tanger/Debug/: .dir  interface.d  support.d  tanger.d  transformations.d
tanger_R3/tests/: Makefile
tanger_R3/tests/bitcode/: testcase-FreeInst_cast.bc  testcase-FreeInst_cast.ll  testcase-i1.bc  testcase-i1.ll
tanger_R3/tests/correctness/: Makefile  exceptions.cpp  funcattribs  funcattribs.bc  funcattribs.c  intrinsics  intrinsics.bc  intrinsics.c  nested_txns  nested_txns.bc  nested_txns.c  privsafety  privsafety.bc  privsafety.c  stack_shared  stack_shared.bc  stack_shared.c  stl  stl.bc  stl.cpp  trigger_serial  trigger_serial.bc  trigger_serial.c
tanger_R3/tests/gibraltar/: Makefile  calls-external-lib.c  stackhint.c
tanger_R3/tests/performance/: Makefile  Makefile.common
tanger_R3/tests/performance/bank-ab/: Makefile  bank  bank.bc  bank.c
tanger_R3/tests/performance/counter/: Makefile  counter  counter.bc  counter.c
tanger_R3/tests/performance/counter-ab/: Makefile  counter  counter-nesting  counter-nesting.bc  counter-nesting.c  counter-serial  counter-serial.bc  counter-serial.c  counter.bc  counter.c
tanger_R3/tests/performance/fairness-ab/: Makefile  fairness  fairness.bc  fairness.c
tanger_R3/tests/performance/intset-ab-ill/: Makefile  intset.c  intset_ll.c  intset_rb.c  rbtree.c  rbtree.h
tanger_R3/tests/performance/intset-ab-ptlsim/: Makefile  hashset.sh  intset.c  intset_hs.c  intset_ll_er.c  intset_sl.c  rbtree.c
tanger_R3/tests/performance/linkedlist/: Makefile  intset  intset.bc  intset.c
tanger_R3/tests/performance/linkedlist-ab/: intset  intset.bc  intset.c
tanger_R3/tests/performance/linkedlist-ab-ptlsim/: intset.c
tanger_R3/tests/performance/rbtree/: Makefile  intset  intset.bc  intset.c  rbtree.bc  rbtree.c  rbtree.h
tanger_R3/tests/performance/rbtree-ab/: intset  intset.bc  intset.c
tanger_R3/tests/sandbox/: Makefile  nontxnal-func-tags.c  stack-rollback-stm.c  stack-rollback.c  tls-stack-pthread.c
tanger_R3/tools/: Makefile
tanger_R3/tools/tmlink/: Makefile  PluginMain.cpp  README  TMLink.td
tanger_R3/tools/tmlink/Debug/: PluginMain.d  TMLink.inc.tmp
